# sim800-series-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: command.rs  error.rs  lib.rs
src/command/: gprs.rs  http.rs  itu.rs  ping.rs  sms.rs  special.rs  stk.rs  tcpip.rs  ue.rs
src/command/common/: data.rs  response.rs
src/command/gprs/: data.rs  response.rs
src/command/http/: data.rs  response.rs
src/command/itu/: data.rs  response.rs
src/command/ping/: data.rs  response.rs
src/command/sms/: data.rs  response.rs  urc.rs
src/command/special/: data.rs  response.rs
src/command/stk/: data.rs  response.rs
src/command/tcpip/: data.rs  response.rs
src/command/ue/: data.rs  response.rs
